samples/_failures_safe/1761325114_354a54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0eaf423d.c:140: error: expected ‘;’, ‘,’ or ‘)’ at end of input
